--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@ body{max-width: 100%; overflow-x: hidden;}
 .jumbotron {background: url('img/john.jpg') no-repeat center center fixed;color:#f5f5f5; background-size: cover;
  height: 700px; width:cover; }
 p{color:#f5f5f5;background-color: rgba(92,87,74, 0.6);margin-top:1.0rem;margin-left:2rem; width:25rem; height:auto;border: none;}
+h4{color:#bb9d52;}
 .btn-outline-primary {color: #bb9d52!important;}
 .btn-outline-primary:hover {background-color: #bb9d52!important;color:#f5f5f5!important;}
 .card-img{padding: 10px; width:30rem; height:auto;border: none;}
@@ -167,8 +168,15 @@ p{color:#f5f5f5;background-color: rgba(92,87,74, 0.6);margin-top:1.0rem;margin-l
       </div>
     </div>
   </div>
-  <div class = "row col-12 ">
-    <img src="img/div1.jpg" class="img-responsive divided" alt="...">
+  <div class="card bg-dark">
+    <div class="card-header">
+    </div>
+    <div class="card-body">
+      <blockquote class="blockquote mb-2 text-center">
+        <h4>“A idade não é barreira. É uma limitação que você coloca em sua mente.”</h4><br>
+        <footer class="blockquote-footer">Jackie Joyner-Kersee<cite title="Source Title"></cite></footer>
+      </blockquote>
+    </div>
   </div>
       <div class="row row-cols-1 row-cols-md-3 mb-3 text-center " >
         <div class="col">
@@ -181,7 +189,7 @@ p{color:#f5f5f5;background-color: rgba(92,87,74, 0.6);margin-top:1.0rem;margin-l
               <ul class="list-unstyled mt-3 mb-4">
                 <li>Dica do dia</li>
                 <li>Artigos baseados em evidência</li>
-                <li>Envie sua dúvida para nosso mural</li>
+                <li>Envie sua dúvida para nós</li>
               </ul>
               <button type="button" class="w-100 btn btn-lg btn-outline-primary border-light  btn-default">Quero conhecer</button>
             </div>
