--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ body{max-width: 100%; overflow-x: hidden;}
 .headerr{height:600px;}
 .jumbotron {background: url('img/john.jpg') no-repeat center center fixed;color:#f5f5f5; background-size: cover;
  height: 700px; width:cover; }
-p{color:#f5f5f5;background-color: rgba(92,87,74, 0.6);margin-top:1.0rem;margin-left:2rem; width:25rem; height:auto;border: none;}
+p{color:#f5f5f5;background-color: rgba(92,87,74, 0.8);margin-top:1.0rem;margin-left:2rem; width:25rem; height:auto;border: none; line-height:1.7em;}
 h4{color:#bb9d52;}
 .btn-outline-primary {color: #bb9d52!important;}
 .btn-outline-primary:hover {background-color: #bb9d52!important;color:#f5f5f5!important;}
