--- a/index.html
+++ b/index.html
@@ -40,20 +40,24 @@ h4{color:#bb9d52;}
    .jumbotron {background: url('img/john1.jpg') no-repeat center center fixed;color:#f5f5f5; background-size: cover;
     height: 1450px; width:cover;  }
     footer{width: 95vw;text-align: justify;}
+    p{color:#f5f5f5;background-color: rgba(92,87,74, 0.8);margin-top:1.0rem;margin-left:1.5rem; width:20rem; height:auto;border: none; line-height:1.6em;}
+    #myBtn{width:1.5rem; height:1.5rem; margin-left: auto;border-radius: 20%;opacity:0.6; padding:0px;}
  }
 
 /*IPAD*/ @media screen and (max-width: 800px){
    .headerr{height:950px;}
    .jumbotron {background: url('img/john1.jpg') no-repeat center center fixed;color:#f5f5f5; background-size: cover;
     height: 1250px; width:cover;  }
-
+    p{color:#f5f5f5;background-color: rgba(92,87,74, 0.8);margin-top:1.0rem;margin-left:1.5rem; width:20rem; height:auto;border: none; line-height:1.6em;}
+    #myBtn{width:1.5rem; height:1.5rem; margin-left: auto;border-radius: 20%;opacity:0.6; padding:0px;}
  }
 
 /*IPHONE 6/7/8/PLUS*/ @media screen and (max-width: 600px) {
    .headerr{height:650px;}
    .jumbotron {background: url('img/john1.jpg') no-repeat center center fixed;color:#f5f5f5; background-size: cover;
-    height: 750px; width:cover;  }
-
+   height: 750px; width:cover;  }
+   p{color:#f5f5f5;background-color: rgba(92,87,74, 0.8);margin-top:1.0rem;margin-left:1.5rem; width:20rem; height:auto;border: none; line-height:1.6em;}
+    #myBtn{width:1.5rem; height:1.5rem; margin-left: auto;border-radius: 20%;opacity:0.6; padding:0px;}
 
  }
 
@@ -62,6 +66,8 @@ h4{color:#bb9d52;}
    .headerr{height:450px;}
    .jumbotron {background: url('img/john1.jpg') no-repeat center center fixed;color:#f5f5f5; background-size: cover;
     height:650px; width:cover;  }
+    p{color:#f5f5f5;background-color: rgba(92,87,74, 0.8);margin-top:1.0rem;margin-left:1.5rem; width:20rem; height:auto;border: none; line-height:1.6em;}
+    #myBtn{width:1.5rem; height:1.5rem; margin-left: auto;border-radius: 20%;opacity:0.6; padding:0px;}
 
 
 
