--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
 <link href="bootstrap.min.css" rel="stylesheet">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
 
-    <style>
+<style>
 
 html{max-width: 100%; overflow-x: hidden;}/*important*/
-body{max-width: 100%; overflow-x: hidden;}
+body{max-width: 99%; overflow-x: hidden;}
 .headerr{height:600px;}
 .jumbotron {background: url('img/john.jpg') no-repeat center center fixed;color:#f5f5f5; background-size: cover;
  height: 700px; width:cover; }
-p{color:#f5f5f5;background-color: rgba(92,87,74, 0.8);margin-top:1.0rem;margin-left:2rem; width:25rem; height:auto;border: none; line-height:1.7em;}
+p{color:#f5f5f5;background-color: rgba(92,87,74, 0.8);margin-top:1.0rem;margin-left:2rem; width:24rem; height:auto;border: none; line-height:1.7em; text-align: center;}
 h4{color:#bb9d52;}
 .btn-outline-primary {color: #bb9d52!important;}
 .btn-outline-primary:hover {background-color: #bb9d52!important;color:#f5f5f5!important;}
@@ -32,6 +32,7 @@ h4{color:#bb9d52;}
 .footer a {color: #bb9d52; font-size: 30px;padding: 10px;transition: all .5s ease;}
 .footer a:hover { color:#F5F5F5;}
 .fa-solid{color: #bb9d52;}
+#myBtn{width:1.5rem; height:1.5rem; margin-left: auto;border-radius: 20%;opacity:0.6; padding:0px;}
 
  /*///mobile mobile* mobile mobile*/
  /*IPAD PRO*/
@@ -40,7 +41,7 @@ h4{color:#bb9d52;}
    .jumbotron {background: url('img/john1.jpg') no-repeat center center fixed;color:#f5f5f5; background-size: cover;
     height: 1450px; width:cover;  }
     footer{width: 95vw;text-align: justify;}
-    p{color:#f5f5f5;background-color: rgba(92,87,74, 0.8);margin-top:1.0rem;margin-left:1.5rem; width:20rem; height:auto;border: none; line-height:1.6em;}
+    p{color:#f5f5f5;background-color: rgba(92,87,74, 0.8);margin-top:1.0rem;margin-left:1.5rem; width:20rem; height:auto;border: none; line-height:1.6em;text-align: center;}
     #myBtn{width:1.5rem; height:1.5rem; margin-left: auto;border-radius: 20%;opacity:0.6; padding:0px;}
  }
 
@@ -48,7 +49,7 @@ h4{color:#bb9d52;}
    .headerr{height:950px;}
    .jumbotron {background: url('img/john1.jpg') no-repeat center center fixed;color:#f5f5f5; background-size: cover;
     height: 1250px; width:cover;  }
-    p{color:#f5f5f5;background-color: rgba(92,87,74, 0.8);margin-top:1.0rem;margin-left:1.5rem; width:20rem; height:auto;border: none; line-height:1.6em;}
+    p{color:#f5f5f5;background-color: rgba(92,87,74, 0.8);margin-top:1.0rem;margin-left:1.5rem; width:20rem; height:auto;border: none; line-height:1.6em;text-align: center;}
     #myBtn{width:1.5rem; height:1.5rem; margin-left: auto;border-radius: 20%;opacity:0.6; padding:0px;}
  }
 
@@ -56,7 +57,7 @@ h4{color:#bb9d52;}
    .headerr{height:650px;}
    .jumbotron {background: url('img/john1.jpg') no-repeat center center fixed;color:#f5f5f5; background-size: cover;
    height: 750px; width:cover;  }
-   p{color:#f5f5f5;background-color: rgba(92,87,74, 0.8);margin-top:1.0rem;margin-left:1.5rem; width:20rem; height:auto;border: none; line-height:1.6em;}
+   p{color:#f5f5f5;background-color: rgba(92,87,74, 0.8);margin-top:1.0rem;margin-left:1.5rem; width:20rem; height:auto;border: none; line-height:1.6em;text-align: center;}
     #myBtn{width:1.5rem; height:1.5rem; margin-left: auto;border-radius: 20%;opacity:0.6; padding:0px;}
 
  }
@@ -66,17 +67,14 @@ h4{color:#bb9d52;}
    .headerr{height:450px;}
    .jumbotron {background: url('img/john1.jpg') no-repeat center center fixed;color:#f5f5f5; background-size: cover;
     height:650px; width:cover;  }
-    p{color:#f5f5f5;background-color: rgba(92,87,74, 0.8);margin-top:1.0rem;margin-left:1.5rem; width:20rem; height:auto;border: none; line-height:1.6em;}
+    p{color:#f5f5f5;background-color: rgba(92,87,74, 0.8);margin-top:1.0rem;margin-left:1.5rem; width:20rem; height:auto;border: none; line-height:1.6em;text-align: center;}
     #myBtn{width:1.5rem; height:1.5rem; margin-left: auto;border-radius: 20%;opacity:0.6; padding:0px;}
-
-
-
- }
+}
 
 
  /***********MOBILE MOBILE*******************************************************************/
 
-    </style>
+</style>
 
   </head>
   <body class="bg-dark">
@@ -132,7 +130,7 @@ h4{color:#bb9d52;}
             <h5 class="card-title">Musculação<span><a href=""><i class="fa-solid fa-dumbbell"></i></a></span></h5>
             <p><strong>Efeitos do treinamento de força na economia de corrida em corredores altamente treinados</strong>
             <br>Esta revisão mostrou um efeito geral unânime e benéfico do treinamento de força na <strong>economia de corrida</strong> em corredores de média e longa distância altamente treinados. Um programa de treinamento de força consistindo de <strong>2 a 4 exercícios resistidos (40 a 70% de 1RM) sem atingir a falha, associados a exercícios pliométricos, na frequência de 2 a 3 vezes por semana</strong> por 8 a 12 semanas é uma estratégia segura para melhorar a economia de corrida. Isso pode ajudar corredores de média e longa distância altamente treinados a alcançar um desempenho ideal.
-            <br><br><a href="https://journals.lww.com/nsca-jscr/Fulltext/2016/08000/Effects_of_Strength_Training_on_Running_Economy_in.36.aspx" target="blank" style="color: #bb9d52">Balsalobre-Fernández C, Santos-Concejero J, Grivas GV. Effects of Strength Training on Running Economy in Highly Trained Runners: A Systematic Review With Meta-Analysis of Controlled Trials. J Strength Cond Res. 2016 Aug;30(8):2361-8. </a>
+            <br><a href="https://journals.lww.com/nsca-jscr/Fulltext/2016/08000/Effects_of_Strength_Training_on_Running_Economy_in.36.aspx" target="blank" style="color: #bb9d52">Balsalobre-Fernández C, Santos-Concejero J, Grivas GV. Effects of Strength Training on Running Economy in Highly Trained Runners: A Systematic Review With Meta-Analysis of Controlled Trials. J Strength Cond Res. 2016 Aug;30(8):2361-8. </a>
 
           </p>
           </div>
@@ -149,7 +147,7 @@ h4{color:#bb9d52;}
             <h5 class="card-title">Corrida <span><a href=""><i class="fa-solid fa-person-running"></i></a></span></h5>
             <p><strong>Aterrissagem dos pés na corrida </strong>
               <br>A <strong>corrida de longa distância</strong> é uma das atividades físicas mais populares, e as lesões relacionadas à corrida também são comuns. Sugere-se que os <strong>padrões de atterissagem do pé</strong> afetam as variáveis biomecânicas relacionadas aos riscos de lesões. Nesta revisão, os autores concluíram que a corrida com a aterrissagem no calcanhar (retropé) impôs cargas biomecânicas mais altas no impacto geral do solo e nas articulações do joelho e patelofemoral, enquanto que a atterissagem com o antepé, impôs cargas biomecânicas mais altas na articulação do tornozelo e no tendão de Aquiles. A modificação das técnicas de aterrissagem pode afetar as cargas biomecânicas específicas experimentadas em estruturas ou tecidos relevantes durante a corrida.
-              <br><br><a href="https://journals.sagepub.com/doi/10.1177/1941738120934715?url_ver=Z39.88-2003&rfr_id=ori:rid:crossref.org&rfr_dat=cr_pub%20%200pubmed" target="blank" style="color: #bb9d52">Xu Y, Yuan P, Wang R, Wang D, Liu J, Zhou H. Effects of Foot Strike Techniques on Running Biomechanics: A Systematic Review and Meta-analysis. Sports Health. 2021 Jan/Feb;13(1):71-77.</a>
+              <br><a href="https://journals.sagepub.com/doi/10.1177/1941738120934715?url_ver=Z39.88-2003&rfr_id=ori:rid:crossref.org&rfr_dat=cr_pub%20%200pubmed" target="blank" style="color: #bb9d52">Xu Y, Yuan P, Wang R, Wang D, Liu J, Zhou H. Effects of Foot Strike Techniques on Running Biomechanics: A Systematic Review and Meta-analysis. Sports Health. 2021 Jan/Feb;13(1):71-77.</a>
   
             </p>
           </div>
@@ -166,7 +164,7 @@ h4{color:#bb9d52;}
             <h5 class="card-title">Bem estar  <span><a href=""><i class="fa-solid fa-spa"></i></a></span></h5>
             <p><strong>Atividade física, exercício e transtornos mentais</strong>
               <br>Evidências convincentes demonstraram que a <strong>atividade física</strong> e o exercício também podem prevenir transtornos mentais comuns, como <strong>depressão e transtornos de ansiedade</strong>, e têm múltiplos efeitos benéficos na saúde física e mental de pessoas com uma ampla gama de transtornos mentais. No entanto, a implementação na prática clínica tem sido lenta, provavelmente devido a barreiras associadas tanto aos pacientes quanto aos profissionais de saúde mental. Exercícios devem ser incorporados à rotina de cuidados de pessoas com transtornos mentais devido aos seus múltiplos benefícios nos resultados de saúde física e mental. Uma abordagem multidisciplinar é necessária para superar as barreiras dos pacientes e aumentar a adesão e os benefícios.
-              <br><br><a href="https://www.scielo.br/j/trends/a/jCRvs9LQq8ycmLwLysGBRFM/?lang=en" target="blank" style="color: #bb9d52">Schuch FB, Vancampfort D. Physical activity, exercise, and mental disorders: it is time to move on. Trends Psychiatry Psychother. 2021 Jul-Sep;43(3):177-184. </a>
+              <br><a href="https://www.scielo.br/j/trends/a/jCRvs9LQq8ycmLwLysGBRFM/?lang=en" target="blank" style="color: #bb9d52">Schuch FB, Vancampfort D. Physical activity, exercise, and mental disorders: it is time to move on. Trends Psychiatry Psychother. 2021 Jul-Sep;43(3):177-184. </a>
   
             </p>
           </div>
